@@ -4,7 +4,8 @@ Changelog
 2.2.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Don't break if the site doesn't have a portal_kss registry.
+  [davisagli]
 
 
 2.2.2 (2012-08-29)
